Fix #116342: crash when moving GP3 keyframe

Caused by 7f626e08e1

It is necessary to use a safer way to identify whether `TransData2D`
points to an int value.